# fh6cardata

./: .api.pid  .gitignore  .ui.pid  README.md  copilot-session-275f71d9-29ff-443e-aca4-11a800db8df8.md  dev.sh  push-cars.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run-dev.sh  run-tests.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml  code-quality.yml  security-scan.yml
api/: __init__.py  main.py
data/: cars.json  garage.json  last_ordinal.json  parts.json
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: CarCard.jsx  CarDetail.jsx  CarGrid.jsx  CarImage.jsx  ComboBox.jsx  Navbar.jsx  SearchFilters.jsx  TunePanel.jsx  UpdateBanner.jsx
frontend/src/hooks/: useAppVersion.js  useDebounce.js  useOwnedCars.js  useWishlistCars.js
scripts/: scrape_wiki.py
tests/: test_api.py
