[project]
name = "fh6cardata"
version = "0.1.0"
description = "Forza Horizon 6 car data browser — Flask API backend"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "shikkie" }]

dependencies = [
    "flask>=3.1.0",
    "flask-cors>=5.0.0",
    "gunicorn>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "bandit[toml]>=1.8",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api"]

# ---------------------------------------------------------------------------
# Bandit — SAST
# ---------------------------------------------------------------------------
[tool.bandit]
targets = ["api", "scripts"]
exclude_dirs = [".venv", "tests", "frontend"]
skips = []

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "S", "RUF", "SIM", "TRY", "RET"]
ignore = [
    "S101",   # assert used in tests
    "TRY003",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ANN", "S105", "S106"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -v"

# ---------------------------------------------------------------------------
# coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["api"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 60
